--- a/index.html
+++ b/index.html
@@ -1,34 +1,16 @@
 <!DOCTYPE html>
-
-<html lang="en">
-  <head>
+<html>
+  <head lang="en">
+    <title>Git Lesson 2</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Git hw_01</title>
     <link rel="stylesheet" href="./styles.css" type="text/css" />
-    <script src="./index.js" defer> </script>
   </head>
   <body>
     <div id="root">
-   
-      <header class="header">
-        <a>My Web App</a>
-        <a href="#"> О нас</a>
-        
-        <a href="#"> FAQ</a>
-      </header>
+      <header>My Web App</header>
+      <main>App description</main>
+      <footer>App links</footer>
     </div>
-    
-      <main class="box-container">
-        <h1>App description</h1>
-      </main>
-    </div>
-
-    <footer>
-      <div class="info">
-        <h3>App links</h3>
-      </div>
-    </footer>
-     <div>
   </body>
 </html>
